# mcdm

./: .gitignore  .pre-commit-config.yaml  README.md  prek.toml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: python-app.yml
src/: Home.py
src/fuzzy_numbers/: __init__.py  triangular.py
src/mcdm/: ahp.py  fuzzy_ahp.py  fuzzy_promethee.py  fuzzy_topsis.py  promethee.py  topsis.py
src/mcdm_app/fuzzy_numbers/: __init__.py
src/mcdm_app/mcdm/: fuzzy_topsis.py
src/mcdm_app/pages/: Fuzzy TOPSIS.py  TOPSIS.py
src/pages/: 1_TOPSIS.py  2_Fuzzy TOPSIS.py  3_PROMETHEE.py  4_Fuzzy PROMETHEE.py  5_AHP.py  6_Fuzzy AHP.py  Fuzzy TOPSIS.py  TOPSIS.py
tests/: ahp_test.py  fuzzy_ahp_test.py  fuzzy_numbers_test.py  fuzzy_promethee_test.py  fuzzy_topsis_test.py  promethee_test.py  topsis_test.py
